# REST_API_on_FastAPI

./: README.md  main.py  pyproject.toml  schemas.py  sql_app.db
database/: models.py
migrations/versions/: 44fff97d4af1_init.py
repository/: contacts.py
routes/: contacts.py
